# renpy

./: .bzrignore  .coveragerc  .deepsource.toml  .env  .git-blame-ignore-revs  .gitattributes  .gitignore  .pep8  7z.sfx  CHANGELOG.txt  CMakeLists.txt  LICENSE.txt  Microsoft.VC90.CRT.manifest  Name  README  README.rst  README_RENPY.txt  TODO.txt  TRANSLATORS.rst  VOICE_README  add.py  add.sh  add_from.py  after_checkout.sh  ansetup.py  archive_images.bat  archiver.py  build_exe.bat  build_exe.py  build_launchertrans.py  build_pot.py  build_strings.py  build_styles.py  build_translations.py  clean_fix.sh  console.bat  console.py  coverage.py  coverage.sh  debug.sh  (+54 more)
.devcontainer/: Dockerfile  create.sh  devcontainer.json  start.sh
.github/: CONTRIBUTING.MD  ISSUE_TEMPLATE.md  dependabot.yml
common/: 00atl.rpy  00build.rpy  00compat.rpy  00definitions.rpy  00developer.rpy  00gallery.rpy  00gamemenu.rpy  00gltest.rpy  00layout.rpy  00library.rpy  00mainmenu.rpy  00menus.rpy  00mixers.rpy  00musicroom.rpy  00nvl_mode.rpy  00preferences.rpy  00screen.rpy  00splines.rpy  00statements.rpy  00style.rpy  00stylepreferences.rpy  00themes.rpy  00updater.rpy  00voice.rpy  Vera.txt  _developer.rpym  _errorhandling.rpym  compat.rpy  definitions.rpy  gamemenu.rpy  library.rpy  mainmenu.rpy  mixers.rpy  music.rpy  nvl_mode.rpy  preferences.rpy  style.rpy  theme.rpy  themes.rpy  voice.rpy
data/: distribute.rpy  editor.rpy  launcher.rpy  new.rpy  script_version.rpy  themes_data.rpy
demo/: library.rpy  script.rpy
demo2/: launcherinfo.py  script.rpy
doc/: DISTRO.txt  EXTENDING.txt  IMPORT_ORDER.txt  Makefile  RELEASING.txt  TIMINGS.txt  docs.css  get.sh  highlight.py  index.html  language.xml  language2.txt  paragraph.py  preprocess.py  process.py  reference.xml  screen.css  style.css  stylesheet.xslt  tutorial.xml  wikidoc.py
doc.old/: docs.css  get.sh  process.py
dse/: CHANGELOG.txt  day_planner.rpy  event_dispatcher.rpy  events.rpy  launcherinfo.py  main.rpy  old_day_planner.rpy
dump_styles/: script.rpy
editor/: SciTEGlobal.properties  scite  scite.linux-i686
extragame/: script.rpy
extras/: 640x480.rpy  annoying_readback_mode.rpy  button_game_menu.rpy  button_menu.rpy  chinese.rpy  commentary.rpy  east_asian.rpy  fullscreen.rpy  gallery.rpy  kanamode.rpy  menu_positions.rpy  overlay_menu.rpy  quick_save.rpy  readback.rpy  side_image.rpy  translations.rpy  two_window_say.rpy  voice.rpy
gl_staging/: glenviron.py  glshader.py  gltest.py  gltexture.py  surface.py
gui/: .gitignore  gitignore.txt  project.json
launcher/: Atom.edit.py  EasyDialogsResources.py  EasyDialogsWin.py  GVim.edit.py  None.edit.py  Sublime Text.edit.py  VSCode.py  VSCodium (System).edit.py  Visual Studio Code (System).edit.py  Visual Studio Code.edit.py  change_icon.py  choose_theme.rpy  distribute.py  distribute.rpy  editor.rpy  icon.icns  interface.rpy  jEdit.editor.py  launcher.rpy  new.rpy  options.rpy  opts.rpy  pefile.py  posixpath.py  project.json  project.rpy  projectsdir.rpy  script.rpy  script_version.rpy  strings.rpy  themes_data.rpy  update_interface.rpy  updater.py  updater.rpy
launcher1/: launcher.rpy
launcher2/: None.editor.py  System.edit.py  archiver.rpy  choose_theme.rpy  distribute.rpy  interface.rpy  jEdit.edit.py  new.rpy  options.rpy  opts.rpy  project.rpy  projectsdir.rpy  public.py  script.rpy  strings.rpy  themes_data.rpy  transupdate.rpy  update_interface.rpy  updater.rpy
launcher3/: main.rpy  nav.rpy  navigate.rpy  navscreens.rpy  page.rpy  project.rpy  renpy.rpy  style.rpy  welcome.rpy
launcher4/: editor.rpy  front_page.rpy  interface.rpy  navigation.rpy  options.rpy  project.rpy  util.rpy  view_project.rpy
module/: BUILDING.txt  IMG_savepng.c  IMG_savepng.h  Makefile  README.txt  SDL.h  Setup  _renpy.c  _renpy.pyx  _renpy_pysdlgl.c  _renpy_pysdlgl.pyx  _renpy_tegl.c  _renpybidi.c  _renpybidi.pyx  _renpysteam.pyx  _renpytfd.pyx  anglesupport.c  anglesupport.h  build.sh  build_android.sh  build_mac.sh  build_win32.sh  core.c  egl_angle.c  egl_none.c  egl_rpi.c  egl_x11.c  eglsupport.h  ffdecode.c  ffmedia.c  ffplay_module.c  ffpy2.c  freetype.pxd  ftsupport.c  ftsupport.h  generate_eastasian.py  generate_linebreak.py  generate_styles.py  gl2debug.c  gl2debug.h  (+41 more)
newdoc/: Makefile  build.sh
olddemo/: launcherinfo.py
olddoc/: doc2html.py  example.xml
oldtutorial/: README.html
predef/: renpy.display.accelerator.pypredef  renpy.display.render.pypredef  renpy.text.textsupport.pypredef  renpy.text.texwrap.pypredef
renpy/: __init__.py  achievement.py  add_from.py  add_id.py  arguments.py  ast.py  astsupport.pyi  astsupport.pyx  atl.py  bootstrap.py  character.py  color.py  config.py  cslots.pyi  cslots.pyx  curry.py  debug.py  defaultstore.py  dump.py  easy.py  ecsign.pyi  ecsign.pyx  editor.py  encryption.pyx  equality.py  error.py  execution.py  exports.py  exports.pyi  format.py  game.py  importer.py  jsondump.py  lexer.py  lexersupport.pyi  lexersupport.pyx  lint.py  loader.py  loadsave.py  location.pyx  (+53 more)
renpygame/: __init__.py  color.py  constants.py  cursors.py  display.py  draw.py  event.py  font.py  image.py  joystick.py  key.py  locals.py  mouse.py  sprite.py  time.py  transform.py
renpygame-demo/: renpygame
scite/: SciTE.editor.py  SciTEGlobal.properties
scripts/: README.rst  add_all.sh  alter_translations.py  autobuild.sh  automatic_translate.py  build_backend.py  check3.py  check_copyright.py  checksums.py  compare_tree_with_git.py  distribute_all.sh  (+38 more)
scripts/sdl3/: .gitignore  generate.sh  main.py  pyproject.toml  sdl.c  setup.py  test.sh  tests.py
scripts/sdl3/c/: SDL3_rotozoom.c  write_jpeg.c
scripts/sdl3/pygame/: __init__.py  color.pxd  color.pyx  controller.pyx  display.pxd  display.pyx  display_api.h  draw.pyx  error.pyx  event.pyx  gfxdraw.pyx  image.pyx  iostream.pxd  iostream.pyx  joystick.pyx  key.pyx  locals.pyx  mouse.pyx  power.pyx  pygame_time.pyx  rect.pxd  rect.pyx  rwobject.pxd  rwobject.pyx  scrap.pyx  sdl3_gfx.pxd  surface.pxd  surface.pyx  surface_api.h  time.py  transform.pyx
scripts/sdl3/src/: SDL3_gfxPrimitives.c
(+2493 files in other folders)
