[project]
name = "renpy"
readme = "README.rst"
license = "MIT"
dynamic = ["version"]
requires-python = ">=3.12,<3.13"
dependencies = [
    "future",
    "six",
    "pefile",
    "requests",
    "ecdsa",
    "pygame_sdl2 @ git+https://github.com/Andykl/pygame_sdl2.git@uv-build",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "cython",
]

[build-system]
requires = [
    "scikit-build-core>=0.11",
    "cython>=3.1.0",
    "pygame_sdl2 @ git+https://github.com/Andykl/pygame_sdl2.git@uv-build",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = ".editable"
editable.mode = "inplace"
editable.rebuild = false
# build.verbose = true
# logging.level = "INFO"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "renpy/versions.py"
regex = '''"main", 3, "(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)"'''
result = "{major}.{minor}.{patch}dev"

[tool.scikit-build.cmake.define]
CMAKE_C_COMPILER = { env = "CC", default = "gcc" }
CMAKE_CXX_COMPILER = { env = "CXX", default = "g++" }
RENPY_STATIC = { env = "RENPY_STATIC" }
RENPY_COVERAGE = { env = "RENPY_COVERAGE" }
CUBISM = { env = "CUBISM" }
PYGAME_SDL2_HEADERS = { env = "PYGAME_SDL2_HEADERS" }


[tool.pyright]
include = ["*.py", "renpy/", "src/"]
exclude = ["module/build/"]
ignore = ["renpycoverage.py"]

reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportMissingModuleSource = false

[tool.cyright]
include = ["*.py", "renpy/", "src/"]
exclude = ["module/build/"]
ignore = ["renpycoverage.py"]

reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportMissingModuleSource = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
preview = true
