[project]
name = "renpy"
readme = "README.rst"
license = "MIT"
version= "8.99.99"
requires-python = "==3.12.*"
dependencies = [
    "future",
    "six",
    "pefile",
    "requests",
    "ecdsa",
    "rsa",
    "setuptools",
    "cython",
    "ruff",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_rtd_dark_mode",
    "jinja2",
]


# For now those are listed in project requirements until build system is updated.
# [project.optional-dependencies]
# dev = ["setuptools", "cython", "ruff"]

# For now, Ren'Py isn't using a build system, as build isolation makes building too slow.

# [build-system]
# requires = ["setuptools", "cython"]
# build-backend = "setuptools.build_meta:__legacy__"

[tool.pyright]
include = [
    "*.py",
    "renpy/",
    "src/"
]

exclude = [
    "module/build/",
]

ignore = [
    "renpycoverage.py"
]

typeCheckingMode = "basic"

reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportMissingModuleSource = false
reportUnnecessaryTypeIgnoreComment = "information"
reportTypeCommentUsage = "information"

[tool.cyright]
include = [
    "*.py",
    "renpy/",
    "src/"
]

exclude = [
    "module/build/",
]

ignore = [
    "renpycoverage.py"
]

reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportMissingModuleSource = false



[tool.ruff]
line-length = 120

[tool.ruff.format]
preview = true
