[project]
name = "sdl3"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.*"
dependencies = [
    "cython>=3.2.1",
    "libclang>=18.1.1",
    "setuptools>=80.9.0",
]


[tool.cyright]
reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportMissingModuleSource = false



[tool.ruff]
line-length = 120

[tool.ruff.format]
preview = true
